--- a/store/blocks/estaticas/corporativo.jsonc
+++ b/store/blocks/estaticas/corporativo.jsonc
@@ -56,7 +56,7 @@
     },
     "disclosure-content#derechocorporativos": {
         "props": {
-            "blockClass": "answer"
+            "blockClass": "contenidoPoliticas"
         },
         "children": ["rich-text#corporativos-content"]
     },
