--- a/store/blocks/product-summary/product-summary-3.jsonc
+++ b/store/blocks/product-summary/product-summary-3.jsonc
@@ -2,7 +2,10 @@
     "product-summary.shelf#3": {
         "children": [
           "flex-layout.row#rowVitrine3"
-        ]
+        ],
+        "props":{
+            "blockClass":"vitrineCarrito"
+        }
     },
     "flex-layout.row#rowVitrine3": {
         "children": [
@@ -16,7 +19,7 @@
     },
     "flex-layout.col#rowVitrine3-1": {
         "props": {
-            "width":"30%",
+            "width":"15%",
             "blockClass": "productInfo3"
         },
         "children": [
@@ -25,20 +28,20 @@
     },
     "stack-layout#prodsum#1": {
         "children": [
-          "product-summary-image#shelf",
-          "modal-trigger#quickview" // Check quickview.jsonc
+          "product-summary-image#shelf"
         ]
     },    
     "flex-layout.col#rowVitrine3-2": {
         "props": {
-            "width":"60%",
+            "width":"85%",
             "blockClass": "productInfo3"
         },
         "children": [
             "product-summary-brand",
             "product-summary-name",
             "product-summary-sku-selector",
-            "product-summary-price"
+            "product-summary-price",
+            "vtex.product-highlights@2.x:product-highlights#collection"
         ]
     },
     "flex-layout.col#rowVitrine3-3": {
@@ -48,10 +51,7 @@
         },
         "children": [
             "add-to-list-btn",
-            "add-to-cart-button",
-            "vtex.product-highlights@2.x:product-highlights#collection",
-            "vtex.product-highlights@2.x:product-highlights#promo",
-            "vtex.product-highlights@2.x:product-highlights#new"
+            "add-to-cart-button"
         ]
     }
 }
